--- a/environment.yml
+++ b/environment.yml
@@ -16,4 +16,5 @@ dependencies:
     - ghp-import==1.1.0
     - sphinxcontrib-youtube==1.1.0
     - sphinx-togglebutton==0.3.1
+    - jaxlib
     - jax
