--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - anaconda=2024.02
   - pip
   - pip:
-    - jupyter-book==0.15.1
+    - jupyter-book
     - docutils==0.17.1
     - sphinx-tojupyter==0.3.0
     - sphinxext-rediraffe==0.2.7
